--- a/src/input.css
+++ b/src/input.css
@@ -7,4 +7,11 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
+}
+
+.search:focus {
+    .search i {
+        display: none !important;
+    }
 }
